0.3.5.13
  - (sharktooth) [x264] Fixed commandline generation when switching between AVC profiles
  - (sharktooth) [x264] Removed touhout tuning option
  - (sharktooth) [x264] Fix commandline generation with tunings
  - (sharktooth) [x264] Fixed Psy-RD settings commandline generation with certain tunings
  - (sharktooth) [VideoPlayer] added a check to stop the player before reloading the video
  - (zathor) [Queue] if a worker tries to start an audio job while another
             audio job is already running the worker will be postponed.
  - (zathor) added overlay icon if a warning or error event has been logged (Windows 7 only)

0.3.5.12
  - (zathor) [FileIndexer] disable DGIndexNV in a RDP session
  - (zathor) [VidePlayerControl] added new control to speed up 
             video navigation. Patch by aKzenT (#1902576)
  - (zathor) [VidePlayer] some cosmetics
  - (zathor) [VidePlayer] added option to reload the video. Feature request #3003709

0.3.5.11
  - (zathor) [x264] fixed more than one --sar in the command line. Bug #3038722
  - (zathor) [MuxWindow] added a unique title to every mux window. Feature request #2937578
  - (zathor) [MuxWindow] added a shortcut to every mux window. Feature request #1868046
  - (zathor) [VideoUtil] fixed a problem if two identical audio sources
             are beeing used in OneClick
  - (zathor) [AutoUpdateServerConfigWindow] new servers will be checked during add
  - (zathor) [Settings] hard-wired the stable & development update servers.
             custom servers can be added if required
  - (zathor) fixed custom FPS, AR and file size saving so that
             only manually added values will be saved permanently. Bug #3064654

0.3.5.10
  - (sharktooth) [x264] Added 64:45 SAR option
  - (sharktooth) [MainForm.cs] Typo
  - (zathor) [Settings] added option for DGIndex(NV) to autoload VOB files
             incrementally. Default value is enabled. Feature request #2955909