@@ -1,4 +1,5 @@
 0.3.5.13
+  - (sharktooth) [x264Encoder] Removed unnecessary/wrong code
   - (sharktooth) [x264] Fixed commandline generation when switching between AVC profiles
   - (sharktooth) [x264] Removed touhout tuning option
   - (sharktooth) [x264] Fix commandline generation with tunings
